# tmpl-fastapi

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/backend/: main.py  settings.py
src/backend/api/: __init__.py
src/backend/api/routers/: user.py
src/backend/api/schemas/: user.py
src/backend/config/: setting.py  settings.py
src/backend/core/: config.py  db.py  settings.py
src/backend/crud/: __init__.py  user_crud.py
src/backend/db/: __init__.py  client.py  response.py
src/backend/models/: __init__.py  _base.py  address.py  address_model.py  base.py  user.py  user_model.py
src/backend/routers/: __init__.py  items.py  root_router.py  user_router.py
src/backend/routers/user/: __init__.py  crud.py  model.py  router.py  schema.py
src/backend/services/: crud_auth.py  user.py
src/backend/utils/: auth.py
src/example_package/: main.py
src/python_fastapi/: main.py
tests/: test_main.py
