[project]
name = "python-fastapi"
version = "0.0.1"
description = ""
authors = [
    {name = "songbinghui", email = "soongbinghui@gmail.com"},
]
dependencies = [
    "python-dotenv>=1.0.0",
    "beepy>=1.0.7",
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.2",
    "chromadb>=0.3.26",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn python_fastapi.main:app --reload"