[project]
name = "fastapi-next"
version = "0.0.1"
description = ""
authors = [
    {name = "songbinghui", email = "soongbinghui@gmail.com"},
]
dependencies = [
    "python-dotenv>=1.0.0",
    "beepy>=1.0.7",
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.2",
    "chromadb>=0.3.26",
    "httpx>=0.24.1",
    "pytest>=7.4.1",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.3",
    "psycopg2-binary>=2.9.7",
    "alembic>=1.12.0",
    "sqlalchemy>=2.0.20",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.scripts]
dev = "python src/backend/main.py"
test = "pytest"

